--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <app></app>
+    <script src="dist/lib.js"></script>
     <script src="dist/app.js"></script>
   </body>
 </html>
