--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
-    <link type="text/css" rel="stylesheet" href="dist/app.css">
+    <link type="text/css" rel="stylesheet" href="app.css">
   </head>
   <body>
     <app></app>
-    <script src="dist/lib.js"></script>
-    <script src="dist/app.js"></script>
+    <script src="lib.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
