--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
   <div id="wrap"></div>
   <rg-loading data={loading}></rg-loading>
   <rg-modal data={modal}></rg-modal>
+  <rg-toast toasts="{ toasts }" position="middlecenter"></rg-toast>
   <script type="es6">
   this.currentView = null
   this.loading = {}
